--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -12,5 +12,9 @@
       <ion-icon name="apps"></ion-icon>
       <ion-label>View Data</ion-label>
     </ion-tab-button>
+    <ion-tab-button tab="export">
+      <ion-icon name="cloud-download"></ion-icon>
+      <ion-label>Export Data</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
