--- a/src/app/add-measurement/add-measurement.page.html
+++ b/src/app/add-measurement/add-measurement.page.html
@@ -6,6 +6,14 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
+
+  <div class="d-flex justify-content-center">
+    <div class="spinner-border" role="status" >
+      <span class="sr-only" id="loading"></span>
+    </div>
+  </div>
+
+
   <form #f="ngForm" (ngSubmit)="onSubmit(f)">
     <ion-list>
       <ion-item>
