Added ngx-spinner to gauge-list-map.module.ts and its related pages. Specified ngx-spinner type to "ball-clip-rotate." Additional options can be viewed at this link: https://labs.danielcardoso.net/load-awesome/animations.html Spinner is now removed on add-measurement.page.ts and gauge-list-map.page.ts when the user chooses not to share their location. - New Issues: - Add measurement asks for location even when gauges are loaded (caused by visiting view-data.page.ts. Consider check for gauges already loaded.) - When sharing your location on gauge-list-map.module.ts, the user is provided with a blank screen if they choose not to share their location. Consider features to 'retry' check if they accidentally pressed no, and inform user of the reason for no map being loaded.

--- a/src/app/add-measurement/add-measurement.page.html
+++ b/src/app/add-measurement/add-measurement.page.html
@@ -7,7 +7,10 @@
 </ion-header>
 <ion-content>
 
-  <ngx-spinner></ngx-spinner>
+  <ngx-spinner type="ball-clip-rotate">
+
+    
+  </ngx-spinner>
 
   <form #f="ngForm" (ngSubmit)="onSubmit(f)">
     <ion-list>
