--- a/src/app/view-data/view-data.page.html
+++ b/src/app/view-data/view-data.page.html
@@ -9,6 +9,8 @@
   </ion-toolbar>
 </ion-header>
 
+<ngx-spinner type="ball-clip-rotate"></ngx-spinner>
+
 <ion-content no-padding>
   <ion-grid>
     <ion-row>
