change http to https

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -27,11 +27,11 @@
         <table>
           <tr>
             <td style="padding-right: 1rem;">
-              <img style="width:350px;" height="90" src="http://liquidearthlake.website/public/image/ttu_logo.png" />
+              <img style="width:350px;" height="90" src="https://liquidearthlake.website/public/image/ttu_logo.png" />
             </td>
             <td>
               <img style="width:350px;" height="90"
-                src="http://liquidearthlake.website/public/image/washington_logo.png" />
+                src="https://liquidearthlake.website/public/image/washington_logo.png" />
             </td>
           </tr>
         </table>
